# gitspaces

./: .cobra.yaml  .flake8  .gitignore  .golangci.yml  CONTRIBUTING.md  DEPRECATION.md  DEVELOPMENT.md  LICENSE  Makefile  PYPI_SETUP.md  README.DEPLOYMENT.md  README.md  TODO.md  devops.sh  gitspaces-config.sh  gitspaces-helpers.sh  gitspaces-repos.sh  gitspaces-spaces.sh  gitspaces.go  gitspaces.sh  go.mod  go.sum  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: README.md  allow-pr-merge.yml  build-pypi-package.yml  build-pypi.yml  ci-pyenv-example.yml  ci-variables.yml  issue-states.yml  publish-pypi-package.yml  publish-pypi.yml  python-latest.yml  python-publish.yml  python-tests-all.yml  python-tests-reusable.yml  python-tests.yml  security-scan-reusable.yml  security-scan.yml  security-scans.yml  static-checks.yml  test-all.yml  test-latest.yml  test-pip-cache.yml  test-reusable.yml  test-with-python-versions-all.yml  test-with-python-versions-latest.yml  test-with-python-versions-reusable.yml  test.yml  vars.yml
cmd/: addRepo.go  code.go  config.go  create.go  rename.go  root.go  setup.go  sleep.go  switch.go  usewhere.go
console/: console.go  prompt.go
github/workflows/: ci-variables.yml  (+1 more)
gitspaces/: gitspaces.go  project.go  shellfiles.go  space.go  user.go
helper/: helper.go
scripts/: install-pypi.sh  release.sh  run-tests.cmd  run-tests.ps1  run-tests.py  run-tests.sh  static-checks.cmd  static-checks.ps1  static-checks.sh  test-pypi-release.sh  test.cmd  test.ps1  test.sh
shell/: gitspaces.cmd  gitspaces.fish  gitspaces.ps1  gitspaces.sh
tests/: __init__.py  conftest.py  test_cli.py  test_cmd_clone_e2e.py  test_cmd_clone_integration.py  test_cmd_code.py  test_cmd_code_e2e.py  test_cmd_config.py  test_cmd_extend_e2e.py  test_cmd_extend_integration.py  test_cmd_rename_e2e.py  test_cmd_rename_integration.py  test_cmd_setup_e2e.py  test_cmd_setup_integration.py  test_cmd_sleep_e2e.py  test_cmd_sleep_integration.py  test_cmd_switch_e2e.py  test_cmd_switch_integration.py  test_config.py  test_console.py  test_errors.py  test_path.py  test_project.py  test_runshell.py  test_space.py
userfiles/: gitconfig  gitspaces.ini  gitspacesrc.sh
utils/: error.go
(+75 files in other folders)
